# solo2p

./: .gitignore  README.md
17750/: .env.example  .gitignore  composer.json  package-lock.json  phpunit.xml  postman_collection.json
17759/: .env  .env.example  package-lock.json  package.json  tsconfig.json
30390/: Makefile  build.sh  config.example.yaml  gitmon_report_20260610_083058.html  gitmon_report_20260610_083059.html  gitmon_report_20260610_083239.html  go.mod  go.sum  main.go  package-lock.json
37c14852-4e81-4088-a9de-b972a84c449c/: package-lock.json
40f0da70-5772-4d95-9b12-60c88b4c1be5/: CampHub.csproj  Program.cs  appsettings.Development.json  appsettings.json  package-lock.json
71f43132-e3cc-49d4-8a15-81ead0fee329/: go.mod  go.sum  package-lock.json
78e57ec7-18f1-434c-baf4-85235b098be8/: index.html  package-lock.json
80b86226-8ba3-4948-affc-a059e2cc1a0c/: Dockerfile.service  README.md  docker-compose.yml  package-lock.json  pom.xml
8ef1bb4a-2fca-4cd9-9845-fb59cb64483f/: index.html  (+1 more)
95833e56-1d77-4e39-9c2f-9a186d167b13/: bench_1m.py  bench_quick.py  hamlog.py  package-lock.json  pyproject.toml
95833e56-1d77-4e39-9c2f-9a186d167b13/hamlog/: __init__.py  __main__.py  adif.py  awards.py  config.py  db.py  dxcc_data.py  main.py  propagation.py  qso.py
95833e56-1d77-4e39-9c2f-9a186d167b13/tests/: conftest.py  test_hamlog.py
c1e1a7aa-6279-4370-aad2-804ae3b215fa/: package-lock.json  pyproject.toml
c1e1a7aa-6279-4370-aad2-804ae3b215fa/cli/: main.py
c1e1a7aa-6279-4370-aad2-804ae3b215fa/cli/commands/: export_import.py  ink.py  journal.py  match.py  mix.py  report.py  ui.py
c1e1a7aa-6279-4370-aad2-804ae3b215fa/core/: color_engine.py  exporter.py  ink_model.py  inventory.py  journal.py
c1e1a7aa-6279-4370-aad2-804ae3b215fa/inkmixer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
c1e1a7aa-6279-4370-aad2-804ae3b215fa/storage/: sqlite_db.py
c1e1a7aa-6279-4370-aad2-804ae3b215fa/utils/: config.py  logger.py
(+848 files in other folders)
