[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hamlog"
version = "1.0.0"
description = "HAMLOG - Amateur Radio QSO Logging CLI Tool"
readme = "hamlog.py"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "HAM Community"}]
keywords = ["ham", "amateur-radio", "qso", "dxcc", "adif", "contest", "propagation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Ham Radio",
]

[project.optional-dependencies]
rich = ["rich>=13.0"]
yaml = ["PyYAML>=6.0"]
prompt = ["prompt_toolkit>=3.0"]
requests = ["requests>=2.28"]
all = ["rich>=13.0", "PyYAML>=6.0", "prompt_toolkit>=3.0", "requests>=2.28"]

[project.scripts]
hamlog = "hamlog:main"

[tool.setuptools]
py-modules = ["hamlog"]

[tool.setuptools.packages.find]
include = []
